# MpiSki

./: .gitignore  CMakeLists.txt  CyclicTestSettings.cpp  CyclicTestSettings.h  CyclicTestSettings.ui  FileSaver.cpp  FileSaver.h  MainTestSettings.cpp  MainTestSettings.h  MainTestSettings.ui  MainWindow.cpp  MainWindow.cpp~RF62c66ae0.TMP  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave  Mpi.cpp  Mpi.h  MpiSettings.cpp  MpiSettings.h  MpiSki.pro  MyChart.cpp  MyChart.h  ObjectWindow.cpp  ObjectWindow.h  ObjectWindow.ui  OtherTestSettings.cpp  OtherTestSettings.h  OtherTestSettings.ui  Program.cpp  Program.h  QXlsx.sln  QXlsx.vcxproj  QXlsx.vcxproj.filters  QXlsxQt6Config.cmake  Registry.cpp  Registry.h  SelectTests.cpp  SelectTests.cpp.fwjtKv  SelectTests.h  SelectTests.ui  (+23 more)
QXlsx/: CMakeLists.txt  QXlsx.pri
QXlsx/header/: xlsxabstractooxmlfile.h
QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxchartsheet.cpp  xlsxcolor.cpp  xlsxdocument.cpp  xlsxdrawinganchor.cpp  xlsxstyles.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp
Src/: CMakeLists.txt
Src/CustomChart/: ChartImageService.cpp  ChartImageService.h  ChartManager.cpp  ChartManager.h  MyChart.cpp  MyChart.h  MySeries.cpp  MySeries.h
Src/Domain/: DeviceConfig.h  DeviceInitializer.cpp  DeviceInitializer.h  Program.cpp  Program.h  Sensor.cpp  Sensor.h  TestContext.h  TestScenarioFactory.cpp  TestScenarioFactory.h
Src/Domain/Analyzer/: MainTestAnalyzer.cpp  MainTestAnalyzer.h  StepTestAnalyzer.cpp  StepTestAnalyzer.h  StrokeTestAnalyzer.cpp  StrokeTestAnalyzer.h
Src/Domain/Measurement/: Sample.h  Sensor.cpp  Sensor.h  TestDataBuffer.h
Src/Domain/Mpi/: Device.cpp  Device.h  Mpi.cpp  Mpi.h  MpiSettings.h  Settings.cpp  Settings.h
Src/Domain/TestParams/: CyclicTestParams.h  StepTestParams.h
Src/Domain/TestResults/: MainTestResult.h  StepTestResult.h  StrokeTestResult.h
Src/Domain/Tests/: AbstractScenario.cpp  AbstractScenario.h  AbstractTestAlgorithm.cpp  AbstractTestAlgorithm.h  AnalyzerFactory.h  BaseRunner.cpp  BaseRunner.h  Context.h  IAnalyzer.h  ITestRunner.h  ScenarioFactory.cpp  ScenarioFactory.h  Test.cpp  Test.h  TestScenario.cpp  TestScenario.h
Src/Domain/Uart/: Message.cpp  Message.h  Port.cpp  Port.h  Reader.cpp  Reader.h  Uart.h  UartMessage.h  UartReader.h
Src/Gui/MainWindow/: CrossingIndicatorsPresenter.cpp  CrossingIndicatorsPresenter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TelemetryUiMapper.cpp  TelemetryUiMapper.h  TestController.cpp  TestController.h
Src/Gui/Setup/: ObjectWindow.cpp  ObjectWindow.h  SelectTests.cpp  SelectTests.h
Src/Gui/TestSettings/: AbstractTestSettings.h  BaseSequenceSettingsDialog.cpp  BaseSequenceSettingsDialog.h  CyclicTestSettings.cpp  CyclicTestSettings.h  MainTestSettings.cpp  MainTestSettings.h  OtherTestSettings.cpp  OtherTestSettings.h  StepTestSettings.cpp  StepTestSettings.h  StepTestSettings.ui
Src/LabeledSlider/: LabeledSlider.cpp  LabeledSlider.h
Src/MPI/: MPI.cpp  MPI.h  MpiSettings.cpp  MpiSettings.h
Src/Mpi/: Mpi.cpp  Mpi.h  MpiSettings.cpp  MpiSettings.h
Src/Report/: Builder.h  BuilderFactory.h  Data.h  Saver.cpp  Saver.h  Writer.cpp  Writer.h
Src/Report/Blocks/: CyclicRanges.h  CyclicRegulatoryRanges.cpp  CyclicRegulatoryRanges.h  CyclicSummary.cpp  CyclicSummary.h  IBlock.h  ObjectInfo.cpp  ObjectInfo.h  PositionSensorDeviationRanges.cpp  PositionSensorDeviationRanges.h  SolenoidDetails.cpp  SolenoidDetails.h  StepReaction.h  StepReactionTable.cpp  StepReactionTable.h  TechnicalResults.cpp  TechnicalResults.h  ValveSpec.cpp  ValveSpec.h
Src/Report/Pages/: CyclicDeviation.cpp  CyclicDeviation.h  CyclicRegulatory.cpp  CyclicRegulatory.h  CyclicShutoffPage.cpp  CyclicShutoffPage.h  SolenoidShutoff.cpp  SolenoidShutoff.h  StepReaction.cpp  StepReaction.h  TechnicalInspection.cpp  TechnicalInspection.h
Src/Report/Patterns/: B_CVT.cpp  B_CVT.h  B_SACVT.cpp  B_SACVT.h  C_CVT.cpp  C_CVT.h  C_SACVT.cpp  C_SACVT.h  C_SOVT.cpp  C_SOVT.h
Src/ReportBuilders/: BTCVReportBuilder.cpp  BTCVReportBuilder.h  BTSVReportBuilder.cpp  BTSVReportBuilder.h  CTCVReportBuilder.cpp  CTCVReportBuilder.h  CTSVReportBuilder.cpp  CTSVReportBuilder.h  CTVReportBuilder.cpp  CTVReportBuilder.h  ReportBuilder.h  ReportBuilderFactory.h  ReportBuilder_B_CVT.cpp  ReportBuilder_B_CVT.h  ReportBuilder_B_SACVT.cpp  ReportBuilder_B_SACVT.h  ReportBuilder_C_CVT.cpp  ReportBuilder_C_CVT.h  ReportBuilder_C_SACVT.cpp  ReportBuilder_C_SACVT.h  ReportBuilder_C_SOVT.cpp  ReportBuilder_C_SOVT.h  ReportSaver.cpp  ReportSaver.h  ReportWriter.h
Src/ReportBuilders/Patterns/: ReportBuilder_B_CVT.cpp  ReportBuilder_B_CVT.h  ReportBuilder_B_SACVT.cpp  ReportBuilder_B_SACVT.h  ReportBuilder_C_CVT.cpp  ReportBuilder_C_CVT.h  ReportBuilder_C_SACVT.cpp  (+3 more)
Src/Runners/: AbstractTestRunner.h  BaseRunner.cpp  BaseRunner.h  CyclicRegulatoryRunner.cpp  CyclicRegulatoryRunner.h  CyclicShutoffRunner.cpp  CyclicShutoffRunner.h  ITestRunner.h  MainTestRunner.cpp  MainTestRunner.h  OptionResolutionRunner.cpp  OptionResolutionRunner.h  OptionResponseRunner.cpp  OptionResponseRunner.h  ResolutionRunner.cpp  ResolutionRunner.h  ResponseRunner.cpp  ResponseRunner.h  RunnerFactory.cpp  RunnerFactory.h  StepTestRunner.cpp  StepTestRunner.h  StrokeTestRunner.cpp  StrokeTestRunner.h
Src/Storage/: AppSettings.cpp  AppSettings.h  ChartImageStorage.cpp  ChartImageStorage.h  Registry.cpp  Registry.h  SettingsGroup.h  Telemetry.h
Src/Telemetry/: TelemetryStore.h
Src/Tests/: CyclicTestPositioner.cpp  CyclicTestPositioner.h  CyclicTestSolenoid.cpp  CyclicTestSolenoid.h  CyclicTests.cpp  CyclicTests.h  CyclicTestsRegulatory.cpp  CyclicTestsRegulatory.h  CyclicTestsShutoff.cpp  CyclicTestsShutoff.h  MainTest.cpp  MainTest.h  OptionTest.cpp  OptionTest.h  StepTest.cpp  StepTest.h  StrokeTest.cpp  StrokeTest.h  Test.cpp  Test.h
Src/Uart/: Uart.cpp  Uart.h  UartMessage.cpp  UartMessage.h  UartReader.cpp  UartReader.h
Src/Utils/: Number.cpp  Number.h  NumberUtils.cpp  NumberUtils.h  SignalUtils.h
Src/ValidatorFactory/: RegexPatterns.h  ValidatorFactory.cpp  ValidatorFactory.h
Tests/Unit/: CMakeLists.txt
(+239 files in other folders)
