set(DOMAIN_CPP
    Domain/DeviceInitializer.cpp
    Domain/Measurement/Sensor.cpp
    Domain/Mpi/Device.cpp
    Domain/Mpi/Settings.cpp
    Domain/Tests/Cyclic/Regulatory/Algorithm.cpp
    Domain/Tests/Cyclic/Regulatory/Analyzer.cpp
    Domain/Tests/Cyclic/Regulatory/Runner.cpp
    Domain/Tests/Cyclic/Shutoff/Algorithm.cpp
    Domain/Tests/Cyclic/Shutoff/Analyzer.cpp
    Domain/Tests/Cyclic/Shutoff/Runner.cpp
    Domain/Tests/Main/Algorithm.cpp
    Domain/Tests/Main/Analyzer.cpp
    Domain/Tests/Main/Runner.cpp
    Domain/Tests/Option/Algorithm.cpp
    Domain/Tests/Option/Step/Algorithm.cpp
    Domain/Tests/Option/Step/Analyzer.cpp
    Domain/Tests/Option/Step/Runner.cpp
    Domain/Tests/Stroke/Algorithm.cpp
    Domain/Tests/Stroke/Analyzer.cpp
    Domain/Tests/Stroke/Runner.cpp
    Domain/Uart/Message.cpp
    Domain/Uart/Port.cpp
    Domain/Uart/Reader.cpp
    Domain/Tests/BaseRunner.cpp
    Domain/Tests/Test.cpp
    Domain/Tests/CyclicPositioner/CyclicTestPositioner.cpp
    Domain/Tests/Option/Response/Runner.cpp
    Domain/Tests/Option/Resolution/Runner.cpp
    Domain/Program.cpp

    Storage/AppSettings.cpp
    Storage/Registry.cpp
    Utils/NumberUtils.cpp
    ValidatorFactory/ValidatorFactory.cpp
)

set(DOMAIN_HEADERS
    Domain/DeviceInitializer.h
    Domain/Measurement/Sample.h
    Domain/Measurement/Sensor.h
    Domain/Measurement/TestDataBuffer.h
    Domain/Mpi/Device.h
    Domain/Mpi/Settings.h
    Domain/Tests/AnalyzerFactory.h
    Domain/Tests/Cyclic/Params.h
    Domain/Tests/Cyclic/Regulatory/Algorithm.h
    Domain/Tests/Cyclic/Regulatory/Analyzer.h
    Domain/Tests/Cyclic/Regulatory/Params.h
    Domain/Tests/Cyclic/Regulatory/Result.h
    Domain/Tests/Cyclic/Regulatory/Runner.h
    Domain/Tests/Cyclic/Shutoff/Algorithm.h
    Domain/Tests/Cyclic/Shutoff/Analyzer.h
    Domain/Tests/Cyclic/Shutoff/Params.h
    Domain/Tests/Cyclic/Shutoff/Result.h
    Domain/Tests/Cyclic/Shutoff/Runner.h
    Domain/Tests/IAnalyzer.h
    Domain/Tests/Main/Algorithm.h
    Domain/Tests/Main/Analyzer.h
    Domain/Tests/Main/Params.h
    Domain/Tests/Main/Result.h
    Domain/Tests/Main/Runner.h
    Domain/Tests/Option/Algorithm.h
    Domain/Tests/Option/Step/Algorithm.h
    Domain/Tests/Option/Step/Analyzer.h
    Domain/Tests/Option/Step/Params.h
    Domain/Tests/Option/Step/Result.h
    Domain/Tests/Option/Step/Runner.h
    Domain/Tests/Stroke/Algorithm.h
    Domain/Tests/Stroke/Analyzer.h
    Domain/Tests/Stroke/Result.h
    Domain/Tests/Stroke/Runner.h
    Domain/Uart/Message.h
    Domain/Uart/Port.h
    Domain/Uart/Reader.h
    Domain/Program.h
    Domain/Tests/Test.h
    Domain/Tests/BaseRunner.h
    Domain/Tests/CyclicPositioner/CyclicTestPositioner.h
    Domain/Tests/Option/Params.h
    Domain/Tests/Option/Response/Runner.h
    Domain/Tests/Option/Resolution/Runner.h

    Storage/AppSettings.h
    Storage/Registry.h
    Storage/SettingsGroup.h
    Storage/Telemetry.h

    Utils/NumberUtils.h
    Utils/SignalUtils.h
    Utils/Shortcuts/TabActionRouter.h
    Utils/Shortcuts/TabBinder.h

    ValidatorFactory/ValidatorFactory.h
    ValidatorFactory/RegexPatterns.h
)

set(REPORT_CPP
    Report/Patterns/B_CVT.cpp
    Report/Patterns/B_SACVT.cpp
    Report/Patterns/C_CVT.cpp
    Report/Patterns/C_SACVT.cpp
    Report/Patterns/C_SOVT.cpp
    Report/Blocks/TechnicalResults.cpp
    Report/Saver.cpp
)

set(REPORT_HEADERS
    Report/Builder.h
    Report/BuilderFactory.h
    Report/Patterns/B_CVT.h
    Report/Patterns/B_SACVT.h
    Report/Patterns/C_CVT.h
    Report/Patterns/C_SACVT.h
    Report/Patterns/C_SOVT.h
    Report/Blocks/CyclicRanges.h
    Report/Blocks/CyclicSummary.h
    Report/Blocks/IBlock.h
    Report/Blocks/ObjectInfo.h
    Report/Blocks/SolenoidDetails.h
    Report/Blocks/StepReaction.h
    Report/Blocks/TechnicalResults.h
    Report/Blocks/ValveSpec.h
    Report/Saver.h
    Report/Writer.h
)

set(GUI_CPP
    Gui/MainWindow/CrossingIndicatorsPresenter.cpp
    Gui/MainWindow/TelemetryUiMapper.cpp
    Gui/MainWindow/TestController.cpp
    Gui/Setup/ValveWindow/Logic.cpp
    Gui/Setup/ValveWindow/Mapper.cpp
    Gui/Setup/ObjectWindow.cpp
    Gui/Setup/ValveWindow/ValveWindow.cpp
    Gui/Setup/SelectTests.cpp
    Gui/MainWindow/MainWindow.cpp
    Gui/TestSettings/CyclicTestSettings.cpp
    Gui/TestSettings/OtherTestSettings.cpp
    Gui/TestSettings/StepTestSettings.cpp
    Gui/TestSettings/MainTestSettings.cpp
    Widgets/Chart/ChartView.cpp
    Widgets/Chart/Series.cpp
    Widgets/Chart/ImageService.cpp
    Widgets/Chart/Manager.cpp
    Widgets/Slider/SliderView.cpp
)

set(GUI_HEADERS
    Gui/MainWindow/CrossingIndicatorsPresenter.h
    Gui/MainWindow/TelemetryUiMapper.h
    Gui/MainWindow/TestController.h
    Gui/Setup/ObjectWindow.h
    Gui/Setup/ValveWindow/Logic.h
    Gui/Setup/ValveWindow/ValveEnums.h
    Gui/Setup/ValveWindow/ValveWindow.h
    Gui/Setup/SelectTests.h
    Gui/Setup/ValveWindow/Mapper.h
    Gui/TestSettings/AbstractTestSettings.h
    Gui/TestSettings/CyclicTestSettings.h
    Gui/TestSettings/OtherTestSettings.h
    Gui/TestSettings/StepTestSettings.h
    Gui/TestSettings/MainTestSettings.h
    Gui/MainWindow/MainWindow.h
    Widgets/Chart/ChartView.h
    Widgets/Chart/Series.h
    Widgets/Chart/ChartType.h
    Widgets/Chart/Point.h
    Widgets/Chart/ImageService.h
    Widgets/Chart/Manager.h
    Widgets/Slider/SliderView.h
)

set(GUI_UI
    Gui/Setup/ObjectWindow.ui
    Gui/Setup/SelectTests.ui
    Gui/Setup/ValveWindow/ValveWindow.ui
    Gui/MainWindow/MainWindow.ui
    Gui/TestSettings/CyclicTestSettings.ui
    Gui/TestSettings/MainTestSettings.ui
    Gui/TestSettings/OtherTestSettings.ui
    Gui/TestSettings/StepTestSettings.ui
)

add_library(Domain STATIC
    ${DOMAIN_CPP}
    ${DOMAIN_HEADERS}
    Report/Blocks/CyclicRegulatoryRanges.h
)

target_include_directories(Domain
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(Domain
    PUBLIC
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        Qt6::Charts
        Qt6::SerialPort
)

add_library(Report STATIC
    ${REPORT_CPP}
    ${REPORT_HEADERS}
)

target_include_directories(Report
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(Report
    PUBLIC
        Qt6::Core
        QXlsx
        Domain
)

add_library(Gui STATIC
    ${GUI_CPP}
    ${GUI_HEADERS}
    ${GUI_UI}
)

target_include_directories(Gui
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(Gui
    PUBLIC
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        Qt6::Charts
        Domain
        Report
)